--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </footer>
     <img src="img/sprite.png" alt="ruler" id="ruler" style="display: none">
     <script src="js/script.js"></script>
+    <script src="js/exercise.js"></script>
+    <script src="js/view.js"></script>
+    <script src="js/controller.js"></script>
 </body>
 
 </html>
